<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feedback_page_info_act"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/BackGroundWhite"
    tools:context="com.example.hammerhead.livefeedbackapp.FeedbackPageInfoActivity">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hello_marginTop"
        android:layout_marginLeft="@dimen/hello_marginLeft"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textSize="@dimen/hello_text_size" />

    <TextView
        android:id="@+id/app_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_info_marginTop"
        android:layout_marginLeft="@dimen/app_info_marginLeft"
        android:text="@string/app_info"
        android:textSize="@dimen/app_info_text_size"
        android:textAlignment="center"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/feedback_button"
        style="@style/button_style"
        android:layout_marginTop="@dimen/feedback_button_marginTop"
        android:text="@string/button_feedback" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/feedback_status_button"
        style="@style/button_style"
        android:layout_marginTop="@dimen/feedback_status_button_marginTop"
        android:text="@string/button_feedback_status" />

</RelativeLayout>
