<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_give_feedback_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hammerhead.livefeedbackapp.GiveFeedbackPageActivity">
        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="User Name"/>

        <EditText
            android:id="@+id/feedback_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="160dp"
            android:layout_marginTop="50dp"
            android:hint="@string/feedback_question_hint"
            android:gravity="top"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/attach_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:text="@string/image_button_text"
            android:layout_marginLeft="107dp"
            android:textColor="@color/ButtonTextTeal"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/post_button"
            style="@style/button_style"
            android:layout_marginTop="@dimen/post_button_marginTop"
            android:text="@string/button_text"/>

</RelativeLayout>
